Fix gitattributes syntax

--- a/Content Factory Pro/.gitattributes
+++ b/Content Factory Pro/.gitattributes
@@ -1,2 +1,2 @@
 *.json text eol=lf
-Code\ Files/1.Social\ Media\ Posting\ -\ From\ CSV.json text
+"Code Files/1.Social Media Posting - From CSV.json" text
