--- a/Content Factory Pro/.gitattributes
+++ b/Content Factory Pro/.gitattributes
@@ -1,2 +1,3 @@
-*.json text eol=lf
-"Code Files/1.Social Media Posting - From CSV.json" text
+*.json text eol=lf diff=json
+"Code Files/1.Social Media Posting - From CSV.json" text diff=json
+"Code Files/1.Social Media Posting - From CSV.json" -binary
